--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,6 @@
     <string name="item_delete">Delete</string>
     <string name="cab_selected">%1$d selected</string>
     <string name="favorite">Favorite</string>
-    <string name="edit">Edit</string>
     <string name="mensuration_title">Mensuration</string>
     <string name="commands_title">Commands</string>
     <string name="oversee_title">Oversee</string>
@@ -62,4 +61,5 @@
     <string name="add_favorite_label">Add Favorite</string>
     <string name="added_to_favorite_message">Added to Favorites</string>
     <string name="remove_label">Remove</string>
+    <string name="item_edit">Edit</string>
 </resources>
